# wxHexEditor-ng

./: .gitignore  CMakeLists.txt  COMPILE  HexEditorGui.fbp  Makefile  PoGen.sh  README.md  testfile.swp.tags  wxHexEditor-ng.cbp  wxHexEditor-ng.workspace  wxHexEditor.workspace
.tx/: config
contrib/: wxHexEditor-ng.spec  wxhexeditor-ng_0.23-1.dsc
contrib/debian/: README  control  menu.ex  rules
locale/: wxHexEditor-ng.pot
locale/ar/: wxHexEditor-ng.po
locale/cs/: wxHexEditor-ng.po
locale/de/: wxHexEditor-ng.po
locale/es/: wxHexEditor-ng.po
locale/fr/: wxHexEditor-ng.po
locale/hu_HU/: wxHexEditor-ng.po
locale/it/: wxHexEditor-ng.po
locale/ja_JP/: wxHexEditor-ng.po
locale/nl_NL/: wxHexEditor-ng.po
locale/pl/: wxHexEditor-ng.po
locale/pt_BR/: wxHexEditor-ng.po
locale/ro/: wxHexEditor-ng.po
locale/ru/: wxHexEditor-ng.po
locale/tr/: wxHexEditor-ng.po
locale/zh_CN/: wxHexEditor-ng.po
mhash/: CMakeLists.txt
resources/: bin2c_mod.py  resource.rc  wxHexEditor-ng.desktop
src/: FAL.cpp  FAL.h  HexDialogs.cpp  HexDialogs.h  HexEditor.cpp  HexEditor.h  HexEditorApp.cpp  HexEditorApp.h  HexEditorFrame.cpp  HexEditorFrame.h  HexEditorGui.cpp  HexEditorGui.h  HexPanels.cpp  HexPanels.h  windrv.cpp  windrv.h
src/HexEditorCtrl/: HexEditorCtrl.cpp  HexEditorCtrl.h
templates/Evtx/: ChunkHeader.template  RecordHeader.template
templates/ExFAT/: FileDirectoryEntry.template  FileNameExtensionEntry.template  StreamExtensionDirectoryEntry.template  VBRExFAT.template  VolumeLabelDirectoryEntry.template
udis86/: udis86.cbp
udis86/udcli/: udcli.c  (+1 more)
(+43 files in other folders)
